Add new users Update notification.
